fix back button alignment in footer

--- a/browser/app.css
+++ b/browser/app.css
@@ -423,7 +423,7 @@ footer {
   }
 
   .back-btn-spacer {
-    right: 183px;
+    right: 200px;
   }
 
   .go-btn {
